# aiogram-antiflood

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aiogram_antiflood/: __init__.py  core.py  middleware.py  storage.py
tests/: test_core.py  test_middleware.py
